# mcp-openmemory

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: release-containers.yaml
containers/mcp-openmemory/: Dockerfile
containers/openmemory-mcp/: Dockerfile
src/openmemory_mcp/: __init__.py  config.py  server.py
