[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmemory-mcp"
version = "0.0.1"
description = "MCP server exposing mem0 long-term memory"
requires-python = ">=3.10"
authors = [
    { name = "Kien Nguyen / Claude Sonnet 4.5" }
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
openmemory-mcp = "openmemory_mcp.server:main"
openmemory-mcp-sse = "openmemory_mcp.server:serve_sse"
openmemory-mcp-http = "openmemory_mcp.server:serve_http"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
